# Automatic-Chess

./: .gitignore  LICENSE  Makefile  README.md  esp32_arm_receiver.ino  esp32_gateway.ino  game_manager.py  pyproject.toml  requirements.txt  robot_controller.py  setup_stockfish.py  test_simulation.py  vision_validator.py  visual_simulation.py
.github/workflows/: ci.yml
chess_robot/: __init__.py  __main__.py  config.py  game.py  geometry.py  geometry_optimizer.py  hardware.py  inventory.py  logging_config.py  planning.py  protocol.py  trajectory.py  transport.py  vision.py  visual_models.py  visual_render.py  visual_simulator.py
docs/: architecture.md  build_dimensions.md  fault_recovery.md  hardware.md  wiring.md
firmware/: esp32_arm_receiver.ino
tests/: test_geometry_optimizer.py  test_move_planner.py  test_protocol_and_hardware.py  test_puck_trajectory.py  test_reset_and_config.py  test_standard_set_layout.py  test_visual_simulator.py
