[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-robot"
version = "0.1.0"
description = "PC-side control stack and visual twin for dual-SCARA chess robots"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chess==1.11.2",
    "numpy==2.4.6",
    "opencv-python==5.0.0.93",
    "pygame==2.6.1",
    "pyserial==3.5",
]

[project.optional-dependencies]
dev = []

[project.scripts]
chess-robot = "chess_robot.__main__:main"

[tool.setuptools.packages.find]
include = ["chess_robot*"]

[tool.setuptools.package-data]
chess_robot = ["py.typed"]
